<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.rp.holliday.HelpActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:icon="@drawable/ic_setting"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_profile"
        android:orderInCategory="100"
        android:icon="@drawable/ic_setting"
        android:title="@string/profile"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_change_password"
        android:orderInCategory="100"
        android:icon="@drawable/ic_setting"
        android:title="@string/change_password"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_logout"
        android:orderInCategory="100"
        android:icon="@drawable/ic_setting"
        android:title="@string/logout"
        app:showAsAction="never" />

</menu>
