<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/minions">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        android:src="@drawable/transparent" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/letstalk"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"/>

    <TextView
        android:id="@+id/letTalk"
        android:layout_below="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lets_talk"
        android:textSize="40sp"
        android:textColor="@color/white"
        android:gravity="center"
        android:layout_marginTop="70dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="252dp"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/roundwhite"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/username"
                style="@style/TexInputStyle"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:background="#00000000"
                android:hint="@string/username"
                android:inputType="text"
                android:paddingStart="10dp"
                android:textColor="#fff"
                android:textColorHint="#fff"
                android:textSize="13sp"
                tools:ignore="RtlSymmetry" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/roundwhite"
            android:orientation="horizontal">


            <EditText
                android:id="@+id/password"
                style="@style/TexInputStyle"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:background="#00000000"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingStart="10dp"
                android:textColor="#fff"
                android:textColorHint="#fff"
                android:textSize="13sp"
                tools:ignore="RtlSymmetry" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/LinearLayout02"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:background="@drawable/round"
                android:gravity="center"
                android:text="@string/login"
                android:textColor="#fff" />

            <Button
                android:id="@+id/register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:background="@drawable/round"
                android:gravity="center"
                android:text="@string/signup"
                android:textColor="#fff" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/LinearLayout03"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/forgot_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:text="@string/forgot_password"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:layout_marginStart="40dp" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
